FIX: overflow-x

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,13 @@
 @import "/src/_variables.scss";
 
 #root {
-    max-width: 100vw;
+  width: 100%;
 }
 
 body {
   width: 100%;
   background-color: $primary-background-color;
+  overflow-x: hidden;
   color: white;
   margin: 0;
   padding: 0;
